Change shell to raw

--- a/main.yml
+++ b/main.yml
@@ -37,7 +37,7 @@
     shell: ngxdis default
 
   - name: Set cgi.fix_pathinfo
-    shell: sed -i "s/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/" /etc/php5/fpm/php.ini
+    raw: sed -i "s/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/" /etc/php5/fpm/php.ini
 	notify:
 	  - restart fpm
 	  - restart nginx
